# nebula-cloud

./: .gitattributes  README.md  README_RU.md
.github/workflows/: backend.yml  frontend.yml
backend/: .gitignore  README.md  conftest.py  pyproject.toml
backend/core/: logging_config.py  settings.py  urls.py  utils.py
backend/core/configs/: file-extensions.json
backend/docs/en/: API.md  ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md  TESTING.md
backend/docs/ru/: API.md  ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md  README.md  TESTING.md
backend/storage/: apps.py  logging.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/storage/migrations/: 0001_initial.py  0002_alter_file_file.py
backend/storage/serializers/: __init__.py  crud_serializers.py  public_serializers.py
backend/storage/services/: services.py
backend/storage/tests/: __init__.py  conftest.py  test_crud_views.py  test_edge_cases.py  test_media_isolation.py  test_models.py  test_permission.py  test_public_views.py  test_serializers.py  test_views_files.py  test_views_public.py
backend/storage/views/: __init__.py  crud_views.py  public_views.py
backend/users/: apps.py  exceptions.py  logging.py  managers.py  models.py  permissions.py  serializers.py  signals.py  throttles.py  urls.py  utils.py  validators.py  views.py
backend/users/migrations/: 0001_initial.py  0002_useraccount_storage_limit.py
backend/users/serializers/: __init__.py  admin_serializers.py  auth_serializers.py  serializers_admin.py  serializers_users.py  users_serializers.py
backend/users/services/: __init__.py  services_admin_user.py  services_auth.py
backend/users/tests/: conftest.py  test_admin_users.py  test_auth.py  test_password_change.py  test_users.py
backend/users/views/: __init__.py  admin_views.py  auth_views.py  users_views.py  views_admin.py  views_auth.py  views_users.py
backend/utils/: ip_utils.py
frontend/: .biomeignore  .gitattributes  .gitignore  README.md  biome.json  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/docs/ru/: README.md
frontend/src/: App.tsx  index.scss  main.tsx
frontend/src/app/: App.test.tsx  App.tsx
frontend/src/app/middlewares/: resetApiMiddleware.ts
frontend/src/app/providers/AuthGuard/: AuthGuard.test.tsx  AuthGuard.tsx  index.ts  types.ts
frontend/src/app/providers/ThemeContext/: ThemeContext.tsx
frontend/src/app/routes/: index.tsx  router.tsx
frontend/src/app/routes/utils/: index.ts  lazyWithSuspense.tsx
frontend/src/app/store/: hooks.ts  store.ts
frontend/src/entities/file/: index.ts
frontend/src/entities/file-upload/: index.ts
frontend/src/entities/file-upload/model/: selectors.ts  slice.ts  types.ts  utils.ts
frontend/src/entities/file/api/: fileApi.ts
frontend/src/entities/file/model/: selectors.ts  slice.test.ts  slice.ts  types.ts
frontend/src/entities/user/: index.ts
frontend/src/entities/user/api/: adminApi.ts  userApi.ts  (+1 more)
frontend/src/features/admin/: index.ts
frontend/src/features/auth/: index.ts
frontend/src/features/storage-usage/: index.ts
frontend/src/features/theme/: index.ts
frontend/src/layouts/: index.ts
frontend/src/layouts/PageFooter/: PageFooter.scss  PageFooter.tsx  index.ts
frontend/src/layouts/PageHeader/: PageHeader.scss  PageHeader.tsx  index.ts
frontend/src/layouts/PageLayout/: PageLayout.scss  PageLayout.tsx  index.ts
frontend/src/layouts/PageMain/: PageMain.scss  PageMain.tsx  index.ts
frontend/src/layouts/PageSidebar/: PageSidebar.scss  PageSidebar.tsx  index.ts
frontend/src/pages/: index.ts
frontend/src/pages/PageAdmin/: index.ts
frontend/src/pages/PageAuth/: index.ts
frontend/src/pages/PageClientDisk/: PageClientDisk.scss  PageClientDisk.tsx  index.ts
frontend/src/pages/PageNotFound/: PageNotFound.scss  PageNotFound.tsx  index.ts
frontend/src/pages/PagePublicFile/: index.ts
frontend/src/pages/PageTest/: PageTest.tsx
frontend/src/pages/PageWelcome/: PageWelcome.scss  PageWelcome.tsx  index.ts
frontend/src/routes/: index.tsx
frontend/src/routes/utils/: index.ts  lazyWithSuspense.tsx
frontend/src/shared/api/: api-errors.test.ts  api-errors.ts  apiBaseUrl.ts  apiErrors.test.ts  apiErrors.ts  baseApi.ts  fetchWithAuth.test.ts  fetchWithAuth.ts  index.ts  tokenRefresh.ts
frontend/src/shared/configs/: file-extensions.json  file-list.json  file-upload.json  keyboard-shortcuts.json  public-routes.json
frontend/src/shared/hooks/: index.ts  useAnimatedClose.ts  useBodyScrollLock.ts  useClickOutside.ts  useFocusTrap.ts  useMediaQuery.ts  useNavigateToUserDisk.ts  useTokenValidation.ts
frontend/src/shared/styles/: _borders.scss  _colors.scss  _fonts.scss  _keyframes.scss  _normalize.scss  _spaces.scss  _typography.scss
frontend/src/shared/types/: api-errors.ts  api.ts  common.ts  configs.ts  converters.ts  theme.ts  validation.ts
frontend/src/shared/ui/: index.ts
frontend/src/shared/utils/: converters.ts  errorUtils.ts  getAdjustedAnchorPositionTransform.ts  getInitials.ts  getPersistedAuthState.test.ts  getPersistedAuthState.ts  getScrollbarWidth.ts  index.ts  isFormValid.test.ts  isFormValid.ts  isPublicRoute.ts  isTokenExpired.ts  time-utils.ts
frontend/src/shared/validators/: index.ts  validateEmail.test.ts  validateEmail.ts  validateLogin.test.ts  validateLogin.ts  validateLoginForm.test.ts  validateLoginForm.ts  validateName.test.ts  validateName.ts  validatePassword.test.ts  validatePassword.ts  validatePasswordConfirm.test.ts  validatePasswordConfirm.ts  validateRegistrationForm.test.ts  validateRegistrationForm.ts
frontend/src/widgets/admin-user-manager/: index.ts
frontend/src/widgets/auth-actions/: index.ts
frontend/src/widgets/auth-form/: index.ts
frontend/src/widgets/file-manager/: index.ts
frontend/src/widgets/file-upload-panel/: index.ts
frontend/src/widgets/user-profile-menu/: index.ts
frontend/tests/: setup.ts
frontend/tests/mocks/: fileApiHandlers.ts  handlers.ts  localStorage.ts  server.ts  userApiHandlers.ts
frontend/tests/utils/: render.tsx
(+351 files in other folders)
