[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula_cloud"
version = "0.1.0"
description = "Бэкенд приложение для облачного хранилища данных на Django"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sergey Tormozov", email = "sergei.tormozow@yandex.ru" }]

dependencies = [
    "Django>=6.0.0,<6.1.0",
    "djangorestframework>=3.15.0,<3.16.0",
    "djangorestframework-simplejwt>=5.3.0",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "nanoid>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "django-debug-toolbar>=4.0.0",
    "factory-boy>=3.3.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.vscode
  | migrations
  | node_modules
  | __pycache__
  | static
  | media
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["migrations", "node_modules", ".venv", "static", "media"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (black handles this)
    "E203", # whitespace before ':'
]
exclude = [
    ".git",
    ".venv",
    "migrations",
    "node_modules",
    "static",
    "media",
    "__pycache__",
]
fix = true
extend-fixable = ["ALL"]
