[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula_cloud"
version = "0.1.0"
description = "Бэкенд приложение для облачного хранилища данных на Django"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Sergey Tormozov", email = "sergei.tormozow@yandex.ru" }]

dependencies = [
    "Django>=6.0.0,<6.1.0",
    "djangorestframework>=3.15.0,<3.16.0",
    "djangorestframework-simplejwt>=5.3.0",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "nanoid>=2.0.0",
    "django-cors-headers>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "django-debug-toolbar>=4.0.0",
    "factory-boy>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = [
    "media",
    "staticfiles",
    "static",
    "node_modules",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "*.migrations",
    "tests",
    "*.tests",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.vscode
  | migrations
  | node_modules
  | __pycache__
  | static
  | media
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

# Новые настройки в секции lint
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (black handles this)
    "E203", # whitespace before ':'
]
extend-fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "users", "storage"]

[tool.ruff.lint.per-file-ignores]
"backend/**/migrations/*.py" = ["E501", "F401"]
"backend/**/tests/*.py" = ["E501"]